--- a/package.json
+++ b/package.json
@@ -3,17 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "nodemon": "^1.17.5",
     "react-scripts": "1.1.4"
   },
   "dependencies": {
+    "concurrently": "^3.5.1",
+    "express": "^4.16.3",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "indicative": "^5.0.5",
+    "jquery": "^3.3.1",
+    "morgan": "^1.9.0",
+    "path": "^0.12.7",
+    "sqlite3": "^4.0.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently --kill-others \"npm run services\" \"npm run client\"",
+    "services": "nodemon -w ./posts-api ./posts-api/server.js",
+    "client": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://localhost:9000/"
 }
